feat: product balance documentation
