# backend/internal/webserver/handlers/balance_handlers/create.go
@@ -2,12 +2,15 @@ package balance_handlers
 
 import (
 	"encoding/json"
-	"log"
 	"net/http"
 
 	"github.com/AllanCordeiro/impacta-alpha-despensa/internal/usecase"
 	"github.com/go-chi/chi/v5"
 )
+
+type Input struct {
+	Quantity int `json:"quantity"`
+}
 
 type Response struct {
 	Status     string      `json:"status"`
@@ -21,23 +24,26 @@ type Response struct {
 // @Tags 				stock-decrease
 // @Accept 				json
 // @Produce 			json
-// @Param 				request body	usecase.UpdateProductInput	true	"product decrease amount"
+// @Param 				request body	Input	true	"product decrease amount"
 // @Success 			200	{object}	Response
 // @Failure 			400	{object}	Response
 // @Failure 			500	{object}	Response
 // @Router 				/api/stock-decrease/{productID} [post]
 func (h *BalanceHandler) CreateProductBalance(w http.ResponseWriter, r *http.Request) {
 	var input usecase.UpdateProductInput
+	var req Input
 
 	w.Header().Set("Content-Type", "application/json")
-	err := json.NewDecoder(r.Body).Decode(&input)
+	err := json.NewDecoder(r.Body).Decode(&req)
 	if err != nil {
-		log.Println(err)
-		w.WriteHeader(http.StatusBadRequest)
-		return
+		if err.Error() != "EOF" {
+			w.WriteHeader(http.StatusBadRequest)
+			return
+		}
 	}
 
 	input.ProductID = chi.URLParam(r, "productID")
+	input.Quantity = req.Quantity
 	if input.Quantity == 0 {
 		input.Quantity = 1
 	}
@@ -45,8 +51,6 @@ func (h *BalanceHandler) CreateProductBalance(w http.ResponseWriter, r *http.Req
 	uc := usecase.NewProductBalanceUpdateUseCase(h.ProductBalanceUow)
 	ouput, err := uc.Execute(input)
 	if err != nil {
-		log.Println("erro de usecase")
-		log.Println(err)
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
